feat: Implement initial structure for hexagonal architecture with application, adapter, and domain layers

--- a/학습.md
+++ b/학습.md
@@ -18,3 +18,12 @@
 5. 그려보기
 
 → 연관관계, 개념 등을 시각화한다.
+
+
+## Port .. 츄파춥스
+- 애플리케이션이 외부세계와 의도를 가지고 상홪ㄱ용 하는 아이디어를 캡처한 것.
+- 단순히 데이터를 주고받는 것이 아니라, 명확한 목적과 방향을 가지고 외부와 연결된다.
+- 애플리케이션이 정의한 `interface` 로 만들어진다.
+- 츄파츕스, 콘센트, 소켓
+- 기능을 제공하는 소켓이다 !!
+- 기능을 요구하는 소켓이다 !!
