--- a/학습.md
+++ b/학습.md
@@ -21,7 +21,7 @@
 
 
 ## Port .. 츄파춥스
-- 애플리케이션이 외부세계와 의도를 가지고 상홪ㄱ용 하는 아이디어를 캡처한 것.
+- 애플리케이션이 외부세계와 의도를 가지고 상호작용 하는 아이디어를 캡처한 것.
 - 단순히 데이터를 주고받는 것이 아니라, 명확한 목적과 방향을 가지고 외부와 연결된다.
 - 애플리케이션이 정의한 `interface` 로 만들어진다.
 - 츄파츕스, 콘센트, 소켓
